# cursor_example

./: DEPLOYMENT.md  README.md  app.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt
data_ingestion/: data_generator.py
resources/: data.app.yml
src/: __init__.py  database_connection.py  query_manager.py
src/models/: __init__.py  table_schemas.py
src/queries/: __init__.py  accounting_queries.py  loan_queries.py  transaction_queries.py
src/utils/: debug_app.py  schema_validator.py
tests/: __init__.py  conftest.py  test_runner.py
tests/integration/: __init__.py  test_end_to_end.py  test_streamlit_integration.py
tests/unit/: __init__.py  test_database_connection.py  test_query_manager.py  test_table_schemas.py
